[package]
name = "clientes_equipos"  # Este nombre debe coincidir con el usado en 'use'
version = "0.1.0"
edition = "2021"

[lib]
name = "clientes_equipos"  # Nombre de la biblioteca
path = "src/lib.rs"        # Ruta al archivo principal de la biblioteca

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
